caroussell fixed clipping through menu bar on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    z-index: -2;
+    position: sticky;
 }
 header{
     background-color: var(--tertiary-color);
@@ -165,6 +167,8 @@ footer a{
 }
 main{
     padding-top:127.4px;
+    z-index: -2;
+    position: sticky;
 }
 .carousell{
     aspect-ratio: 4.5/1;
@@ -190,22 +194,6 @@ main{
 .carousell-element img{
     min-height: 100%;
     min-width: 100%;
-}
-.carousell-element:first-child{
-    animation: carousell-scroll 15s ease-in-out infinite;
-}
-@keyframes carousell-scroll {
-    0%{margin-left:0vw}
-    18%{margin-left:0vw}
-    20%{margin-left:-100vw}
-    38%{margin-left:-100vw}
-    40%{margin-left:-200vw}
-    58%{margin-left:-200vw}
-    60%{margin-left:-300vw}
-    78%{margin-left:-300vw}
-    80%{margin-left:-400vw}
-    99.9999%{margin-left:-400vw}
-    100%{margin-left:0vw}
 }
 .carousell-overlay{
     content: '';
